feat: adota recursos do Java 25